--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gh-pages": "^4.0.0",
     "gsap": "^3.11.5",
     "next": "^13.4.4",
+    "nodemailer": "^6.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
