--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.18",
+    "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
     "framer-motion": "^6.5.1",
     "gh-pages": "^4.0.0",
@@ -25,7 +26,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
-    "react-slideshow-image": "^4.2.1"
+    "react-slideshow-image": "^4.2.1",
+    "sharp": "^0.32.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
