--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.18",
+    "@react-three/drei": "^9.80.1",
+    "@react-three/fiber": "^8.13.6",
     "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
     "framer-motion": "^6.5.1",
@@ -27,13 +29,17 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-slideshow-image": "^4.2.1",
-    "sharp": "^0.32.4"
+    "sharp": "^0.32.4",
+    "stats.js": "^0.17.0",
+    "three": "^0.155.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "eslint": "8.15.0",
     "eslint-config-next": "^13.4.4",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.13",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.0.24"
   }
 }
